force-app/main/default/objects/Shipment__c/fields/Destination_Latitude__c.field-meta.xml
<CustomField><fullName>Destination_Latitude__c</fullName><label>Destination Latitude</label><precision>9</precision><scale>6</scale><type>Number</type></CustomField>