force-app/main/default/objects/Shipment__c/fields/Destination_Longitude__c.field-meta.xml
<CustomField><fullName>Destination_Longitude__c</fullName><label>Destination Longitude</label><precision>9</precision><scale>6</scale><type>Number</type></CustomField>