force-app/main/default/objects/Shipment__c/fields/Origin_Latitude__c.field-meta.xml
<CustomField><fullName>Origin_Latitude__c</fullName><label>Origin Latitude</label><precision>9</precision><scale>6</scale><type>Number</type></CustomField>