force-app/main/default/objects/Shipment__c/fields/Origin_Longitude__c.field-meta.xml
<CustomField><fullName>Origin_Longitude__c</fullName><label>Origin Longitude</label><precision>9</precision><scale>6</scale><type>Number</type></CustomField>