force-app/main/default/objects/Shipment__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>